--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,33 @@
     "    with open(inputfile, \"r\") as f:\n",
     "        data = f.readlines()\n",
     "    print(\"Read Data --> \", data)\n",
-    "    return data"
+    "    \n",
+    "    visited_node = {}\n",
+    "    visited_edge = {}\n",
+    "    graph_data = {}\n",
+    "    n_counter, e_counter = 0, 0\n",
+    "    for i in data:\n",
+    "        i = i.split(\"/\")\n",
+    "        i = list(map(str.strip, i))\n",
+    "        if \"\" in i:\n",
+    "            i.remove(\"\")\n",
+    "        if len(i) != 0:\n",
+    "            edge = i[0]\n",
+    "            nodes = i[1:]\n",
+    "            if edge not in graph_data:\n",
+    "                graph_data[edge] = []\n",
+    "                for n in nodes:\n",
+    "                    if n not in graph_data[edge]:\n",
+    "                        graph_data[edge].append(n)\n",
+    "            if edge not in list(visited_edge.keys()):\n",
+    "                visited_edge[edge] = e_counter\n",
+    "                e_counter = e_counter + 1\n",
+    "            for n in nodes:\n",
+    "                if n not in list(visited_node.keys()):\n",
+    "                    visited_node[n] = n_counter\n",
+    "                    n_counter = n_counter + 1\n",
+    "    \n",
+    "    return graph_data, visited_node, visited_edge"
    ]
   },
   {
@@ -69,60 +95,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read Data -->  ['Indigo666 / Chennai / New Delhi\\n', 'Indigo777 / Calcutta / New Delhi\\n', 'Spicejet222 / Ahmedabad / Nagpur / Mumbai\\n', 'AirIndia111 / Ahmedabad / New Delhi\\n', 'Vistara555 / Vishakhapatnam / Hyderabad\\n', 'Indigo777 / Calcutta / New Delhi / Bangalore\\n', 'AirIndia111 / Ahmedabad\\n', 'AirAsia444 /']\n",
-      "\n",
-      "Graph Adjacency List -->  {'Indigo666': ['Chennai', 'New Delhi'], 'Indigo777': ['Calcutta', 'New Delhi', 'Bangalore'], 'Spicejet222': ['Mumbai', 'Nagpur', 'Ahmedabad'], 'AirIndia111': ['New Delhi', 'Ahmedabad'], 'Vistara555': ['Vishakhapatnam', 'Hyderabad'], 'AirAsia444': []}\n",
-      "\n",
-      "Total number of cargo flights:  6\n",
-      "Total number of Airports:  9\n",
-      "\n",
-      "List of cargo flights: \n",
-      "Indigo666\n",
-      "Indigo777\n",
-      "Spicejet222\n",
-      "AirIndia111\n",
-      "Vistara555\n",
-      "AirAsia444\n",
-      "\n",
-      "List of Airports: \n",
-      "Nagpur\n",
-      "Chennai\n",
-      "Bangalore\n",
-      "Calcutta\n",
-      "Vishakhapatnam\n",
-      "Mumbai\n",
-      "Hyderabad\n",
-      "New Delhi\n",
-      "Ahmedabad\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def showAll(data):\n",
-    "    graph = {}\n",
-    "    for i in data:\n",
-    "        i = i.split(\"/\")\n",
-    "        i = list(map(str.strip, i))\n",
-    "        if \"\" in i:\n",
-    "            i.remove(\"\")\n",
-    "        if len(i) != 0:\n",
-    "            node = i[0]\n",
-    "            if node not in graph:\n",
-    "                graph[node] = []\n",
-    "            vertices = list(set(graph[node] + i[1:]))\n",
-    "            graph[node] = vertices\n",
+    "def showAll(graph_data, visited_node, visited_edge):\n",
+    "    for e in graph_data:\n",
+    "        edge = e\n",
+    "        node = graph_data[e]\n",
+    "        node_pairs = [[node[i], node[i + 1]] for i in range(len(node) - 1)]\n",
+    "        for pair in node_pairs:\n",
+    "            n1 = pair[0]\n",
+    "            n2 = pair[1]\n",
+    "            n1_index, n2_index = visited_node[n1], visited_node[n2]\n",
+    "            adj_matrix[n1_index][n2_index] = 1\n",
+    "            adj_matrix[n2_index][n1_index] = 1\n",
     "    \n",
-    "    print(\"\\nGraph Adjacency List --> \", graph)\n",
-    "    \n",
-    "    cargo_flights = list(graph.keys())\n",
-    "    airports = list(set([j for i in list(graph.values()) for j in i]))\n",
+    "    cargo_flights = list(visited_edge.keys())\n",
+    "    airports = list(visited_node.keys())\n",
     "    \n",
     "    out_file = open('./output/outputPS15.txt', 'w')\n",
     "\n",
@@ -145,11 +135,45 @@
     "        out_file.write(\"\\n{}\".format(i))\n",
     "    \n",
     "    out_file.close()\n",
-    "    return graph\n",
-    "\n",
-    "graph_data = readAirportFlightfile(\"./input/inputPS15.txt\")\n",
-    "\n",
-    "graph_adj_list = showAll(graph_data)\n"
+    "    return adj_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read Data -->  ['Indigo666 / Chennai / New Delhi\\n', 'Indigo777 / Calcutta / New Delhi\\n', 'Spicejet222 / Ahmedabad / Nagpur / Mumbai\\n', 'AirIndia111 / Ahmedabad / New Delhi\\n', 'Vistara555 / Vishakhapatnam / Hyderabad']\n",
+      "\n",
+      "Total number of cargo flights:  5\n",
+      "Total number of Airports:  8\n",
+      "\n",
+      "List of cargo flights: \n",
+      "Indigo666\n",
+      "Indigo777\n",
+      "Spicejet222\n",
+      "AirIndia111\n",
+      "Vistara555\n",
+      "\n",
+      "List of Airports: \n",
+      "Chennai\n",
+      "New Delhi\n",
+      "Calcutta\n",
+      "Ahmedabad\n",
+      "Nagpur\n",
+      "Mumbai\n",
+      "Vishakhapatnam\n",
+      "Hyderabad\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph_data, visited_node, visited_edge = readAirportFlightfile(\"./input/inputPS15.txt\")\n",
+    "graph_adj_atrix = showAll(graph_data, visited_node, visited_edge)"
    ]
   },
   {
