problem 5 solved, print output simplified

--- a/Assignment-1_gayan.ipynb
+++ b/Assignment-1_gayan.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_to_file(message):\n",
+    "    out_file = open('outputPS15.txt', 'a')\n",
+    "    out_file.write(message)\n",
+    "    out_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,35 +181,28 @@
     "    cargo_flights = list(flights_dict.keys())\n",
     "    airports = list(airports_dict.keys())\n",
     "    \n",
-    "    out_file = open('outputPS15.txt', 'w')\n",
-    "\n",
-    "    print(\"--------Function showAll --------\")\n",
-    "    out_file.write(\"--------Function showAll --------\")\n",
+    "    output_msg = \"--------Function showAll --------\\n\"\n",
     "    \n",
-    "    print(\"\\nTotal number of cargo flights: \", len(cargo_flights))\n",
-    "    out_file.write(\"Total number of cargo flights: {}\".format(len(cargo_flights)))\n",
+    "    output_msg += \"Total number of cargo flights: {}\\n\".format(len(cargo_flights))\n",
     "    \n",
-    "    print(\"Total number of Airports: \", len(airports))\n",
-    "    out_file.write(\"\\nTotal number of Airports: {}\".format(len(airports)))\n",
+    "    output_msg += \"Total number of Airports: {}\\n\".format(len(airports))\n",
     "    \n",
-    "    print(\"\\nList of cargo flights: \")\n",
-    "    out_file.write(\"\\n\\nList of cargo flights: \")\n",
+    "    output_msg += \"\\nList of cargo flights: \"\n",
     "    for i in cargo_flights:\n",
-    "        print(i)\n",
-    "        out_file.write(\"\\n{}\".format(i))\n",
+    "        output_msg += \"\\n{}\".format(i)\n",
     "\n",
-    "    print(\"\\nList of Airports: \")\n",
-    "    out_file.write(\"\\n\\nList of Airports: \")\n",
+    "    output_msg += \"\\n\\nList of Airports: \"\n",
     "    for i in airports:\n",
-    "        print(i)\n",
-    "        out_file.write(\"\\n{}\".format(i))\n",
+    "        output_msg += \"\\n{}\".format(i)\n",
     "    \n",
-    "    out_file.close()"
+    "    output_msg += \"\\n---------------------------------------\\n\"\n",
+    "    print(output_msg)\n",
+    "    write_to_file(output_msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -205,9 +210,8 @@
      "output_type": "stream",
      "text": [
       "--------Function showAll --------\n",
-      "\n",
-      "Total number of cargo flights:  5\n",
-      "Total number of Airports:  8\n",
+      "Total number of cargo flights: 5\n",
+      "Total number of Airports: 8\n",
       "\n",
       "List of cargo flights: \n",
       "Indigo666\n",
@@ -224,7 +228,9 @@
       "Nagpur\n",
       "Mumbai\n",
       "Vishakhapatnam\n",
-      "Hyderabad\n"
+      "Hyderabad\n",
+      "---------------------------------------\n",
+      "\n"
      ]
     }
    ],
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,43 +298,38 @@
     "            hub_flights_lst = flights_lst\n",
     "\n",
     "    \n",
-    "    out_file = open('outputPS15.txt', 'w')\n",
     "\n",
-    "\n",
-    "    print(\"--------Function displayHubAirport --------\")\n",
-    "    out_file.write(\"--------Function displayHubAirport --------\")\n",
-    "    print(\"\\nMain hub airport: {}\".format(hub_airport))\n",
-    "    out_file.write(\"\\nMain hub airport: {}\".format(hub_airport))\n",
-    "    print(\"Number of cargo flights visited: \",max_tot_flights)\n",
-    "    out_file.write(\"\\nNumber of cargo flights visited: {}\".format(max_tot_flights))\n",
-    "    print(\"List of Cargo Flights:\")\n",
-    "    out_file.write(\"\\nList of Cargo Flights:\")\n",
+    "    output_msg = \"\\n\\n--------Function displayHubAirport --------\\n\"\n",
+    "    output_msg += \"Main hub airport: {}\\n\".format(hub_airport)\n",
+    "    output_msg += \"Number of cargo flights visited: {}\\n\".format(max_tot_flights)\n",
+    "    output_msg += \"List of Cargo Flights:\\n\"\n",
     "    for f in hub_flights_lst:\n",
-    "        print(f)\n",
-    "        out_file.write(\"\\n{}\".format(f))\n",
-    "    print(\"-----------------------------------------\")\n",
-    "    out_file.write(\"\\n-----------------------------------------\")\n",
-    "    out_file.close()"
+    "        output_msg += \"{}\\n\".format(f)\n",
+    "    output_msg += \"-----------------------------------------\\n\"\n",
+    "    print(output_msg)\n",
+    "    write_to_file(output_msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------Function displayHubAirport --------\n",
       "\n",
+      "\n",
+      "--------Function displayHubAirport --------\n",
       "Main hub airport: New Delhi\n",
-      "Number of cargo flights visited:  3\n",
+      "Number of cargo flights visited: 3\n",
       "List of Cargo Flights:\n",
       "Indigo666\n",
       "Indigo777\n",
       "AirIndia111\n",
-      "-----------------------------------------\n"
+      "-----------------------------------------\n",
+      "\n"
      ]
     }
    ],
@@ -382,21 +383,16 @@
     "            connected_airports.append(airport)\n",
     "\n",
     "    \n",
-    "    out_file = open('outputPS15.txt', 'w')\n",
     "\n",
-    "    print(\"--------Function displayConnectedAirports --------\")\n",
-    "    out_file.write(\"\\n--------Function displayConnectedAirports --------\")\n",
-    "    print(\"Cargo flight number: \", flight)\n",
-    "    out_file.write(\"\\nCargo flight number: {}\".format(flight))\n",
-    "    print(\"Number of airports connected: \", len(connected_airports))\n",
-    "    out_file.write(\"\\nNumber of airports connected: {}\".format(len(connected_airports)))\n",
-    "    print(\"List of airports connected directly by :\", flight)\n",
-    "    out_file.write(\"\\nList of airports connected directly by : {}\".format(flight))\n",
+    "    output_msg = \"\\n--------Function displayConnectedAirports --------\"\n",
+    "    output_msg += \"\\nCargo flight number: {}\".format(flight)\n",
+    "    output_msg += \"\\nNumber of airports connected: {}\".format(len(connected_airports))\n",
+    "    output_msg += \"\\nList of airports connected directly by : {}\".format(flight)\n",
     "    for ap in connected_airports:\n",
-    "        print(ap)\n",
-    "        out_file.write(\"\\n {}\".format(ap))\n",
-    "    print(\"-----------------------------------------\")\n",
-    "    out_file.write(\"\\n-----------------------------------------\")\n",
+    "        output_msg += \"\\n {}\".format(ap)\n",
+    "    output_msg += \"\\n-----------------------------------------\\n\"\n",
+    "    print(output_msg)\n",
+    "    write_to_file(output_msg)\n",
     "    "
    ]
   },
@@ -409,19 +405,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "--------Function displayConnectedAirports --------\n",
-      "Cargo flight number:  Spicejet222\n",
-      "Number of airports connected:  3\n",
+      "Cargo flight number: Spicejet222\n",
+      "Number of airports connected: 3\n",
       "List of airports connected directly by : Spicejet222\n",
-      "Ahmedabad\n",
-      "Nagpur\n",
-      "Mumbai\n",
-      "-----------------------------------------\n"
+      " Ahmedabad\n",
+      " Nagpur\n",
+      " Mumbai\n",
+      "-----------------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "displayConnectedAirports(\"Spicejet222\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. def displayDirectFlight(self, airport a, airport b):\n",
+    "\n",
+    "This function displays the cargo flight name which can be booked to send a food box directly from airport a to airport b.\n",
+    " The function reads the input airports from the file promptsPS15.txt with the tag as shown below.\n",
+    "\n",
+    " \n",
+    "searchAirports: Calcutta: New Delhi\n",
+    "\n",
+    "searchAirports: Chennai: Hyderabad\n",
+    "\n",
+    "The output of this function should be appended into outputPS15.txt file. \n",
+    "If there is no direct flight or an airport is not found, an appropriate message should be output to the file.\n",
+    " The output format should be as mentioned below. If there is more than one flight that can be booked, the flight number you encounter first can be output.\n",
+    "\n",
+    "--------Function displayDirectFlight --------\n",
+    "\n",
+    "Airport A: Calcutta\n",
+    "\n",
+    "Airport B: New Delhi\n",
+    "\n",
+    "Food box can be sent directly: Yes, Indigo666 (if no, display appropriate message)\n",
+    "\n",
+    "\n",
+    "-----------------------------------------\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def displayDirectFlight(airport_a, airport_b):\n",
+    "\n",
+    "    output_msg = \"\\n--------Function displayDirectFlight --------\\n\"\n",
+    "    output_msg += \"Airport A: {}\\n\".format(airport_a)\n",
+    "    output_msg += \"Airport B: {}\\n\".format(airport_b)\n",
+    "    flights = list(flights_dict.keys())\n",
+    "    airport_a_id, airport_b_id = airports_dict[airport_a], airports_dict[airport_b]\n",
+    "    for flight in flights:\n",
+    "        flight_id = flights_dict[flight]\n",
+    "        if adj_matrix[flight_id][airport_a_id] & adj_matrix[flight_id][airport_b_id]:\n",
+    "            output_msg += \"Food box can be sent directly: Yes, {}\\n\".format(flight)\n",
+    "            output_msg += \"-----------------------------------------\\n\"\n",
+    "            print(output_msg)\n",
+    "            write_to_file(output_msg)\n",
+    "            return flight\n",
+    "    output_msg += \"Food box can be sent directly: No, There are no direct flights available.\\n\"\n",
+    "    output_msg += \"-----------------------------------------\\n\"\n",
+    "    print(output_msg)\n",
+    "    write_to_file(output_msg)\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------Function displayDirectFlight --------\n",
+      "Airport A: Chennai\n",
+      "Airport B: New Delhi\n",
+      "Food box can be sent directly: Yes, Indigo666\n",
+      "-----------------------------------------\n",
+      "\n",
+      "\n",
+      "--------Function displayDirectFlight --------\n",
+      "Airport A: Calcutta\n",
+      "Airport B: New Delhi\n",
+      "Food box can be sent directly: Yes, Indigo777\n",
+      "-----------------------------------------\n",
+      "\n",
+      "\n",
+      "--------Function displayDirectFlight --------\n",
+      "Airport A: Ahmedabad\n",
+      "Airport B: Nagpur\n",
+      "Food box can be sent directly: Yes, Spicejet222\n",
+      "-----------------------------------------\n",
+      "\n",
+      "\n",
+      "--------Function displayDirectFlight --------\n",
+      "Airport A: Ahmedabad\n",
+      "Airport B: Mumbai\n",
+      "Food box can be sent directly: Yes, Spicejet222\n",
+      "-----------------------------------------\n",
+      "\n",
+      "\n",
+      "--------Function displayDirectFlight --------\n",
+      "Airport A: Ahmedabad\n",
+      "Airport B: Chennai\n",
+      "Food box can be sent directly: No, There are no direct flights available.\n",
+      "-----------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "displayDirectFlight(\"Chennai\",\"New Delhi\")\n",
+    "displayDirectFlight(\"Calcutta\",\"New Delhi\")\n",
+    "displayDirectFlight(\"Ahmedabad\",\"Nagpur\")\n",
+    "displayDirectFlight(\"Ahmedabad\",\"Mumbai\")\n",
+    "displayDirectFlight(\"Ahmedabad\",\"Chennai\")"
    ]
   },
   {
