--- a/Assignment-1_gayan.ipynb
+++ b/Assignment-1_gayan.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -369,11 +369,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def displayConnectedAirports(flight):\n",
+    "# internal = True when called by other internal functions. Default False\n",
+    "def displayConnectedAirports(flight, internal=False):\n",
     "    connected_airports = []\n",
     "    airports = list(airports_dict.keys())\n",
     "    flight_id = flights_dict[flight]\n",
@@ -391,14 +392,16 @@
     "    for ap in connected_airports:\n",
     "        output_msg += \"\\n {}\".format(ap)\n",
     "    output_msg += \"\\n-----------------------------------------\\n\"\n",
-    "    print(output_msg)\n",
-    "    write_to_file(output_msg)\n",
+    "    if internal==False:\n",
+    "        print(output_msg)\n",
+    "        write_to_file(output_msg)\n",
+    "    return connected_airports\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -416,10 +419,77 @@
       "-----------------------------------------\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Ahmedabad', 'Nagpur', 'Mumbai']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "displayConnectedAirports(\"Spicejet222\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### def displayConnectedFlights(airport):\n",
+    "This function displays all the flights are connected to a single airport."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def displayConnectedFlights(airport):\n",
+    "    connected_flights = []\n",
+    "    flights = list(flights_dict.keys())\n",
+    "    airport_id = airports_dict[airport]\n",
+    "    for flight in flights:\n",
+    "        flight_id = flights_dict[flight]\n",
+    "        if adj_matrix[flight_id][airport_id]:\n",
+    "            connected_flights.append(flight)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    output_msg = \"\\n--------Function displayConnectedFlights --------\"\n",
+    "    output_msg += \"\\nAirport : {}\".format(airport)\n",
+    "    output_msg += \"\\nNumber of flights connected: {}\".format(len(connected_flights))\n",
+    "    output_msg += \"\\nList of flights connected directly to : {}\".format(airport)\n",
+    "    for fl in connected_flights:\n",
+    "        output_msg += \"\\n {}\".format(fl)\n",
+    "    output_msg += \"\\n-----------------------------------------\\n\"\n",
+    "    # print(output_msg)\n",
+    "    # write_to_file(output_msg)\n",
+    "    return connected_flights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Indigo666', 'Indigo777', 'AirIndia111']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "displayConnectedFlights(\"New Delhi\")"
    ]
   },
   {
@@ -455,11 +525,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def displayDirectFlight(airport_a, airport_b):\n",
+    "# internal = True when called by other internal functions. Default False\n",
+    "def displayDirectFlight(airport_a, airport_b, internal=False):\n",
     "\n",
     "    output_msg = \"\\n--------Function displayDirectFlight --------\\n\"\n",
     "    output_msg += \"Airport A: {}\\n\".format(airport_a)\n",
@@ -471,19 +542,21 @@
     "        if adj_matrix[flight_id][airport_a_id] & adj_matrix[flight_id][airport_b_id]:\n",
     "            output_msg += \"Food box can be sent directly: Yes, {}\\n\".format(flight)\n",
     "            output_msg += \"-----------------------------------------\\n\"\n",
-    "            print(output_msg)\n",
-    "            write_to_file(output_msg)\n",
+    "            if internal==False:\n",
+    "                print(output_msg)\n",
+    "                write_to_file(output_msg)\n",
     "            return flight\n",
     "    output_msg += \"Food box can be sent directly: No, There are no direct flights available.\\n\"\n",
     "    output_msg += \"-----------------------------------------\\n\"\n",
-    "    print(output_msg)\n",
-    "    write_to_file(output_msg)\n",
+    "    if internal==False:\n",
+    "        print(output_msg)\n",
+    "        write_to_file(output_msg)\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -534,6 +607,184 @@
     "displayDirectFlight(\"Ahmedabad\",\"Nagpur\")\n",
     "displayDirectFlight(\"Ahmedabad\",\"Mumbai\")\n",
     "displayDirectFlight(\"Ahmedabad\",\"Chennai\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. def findServiceAvailable(self, airport a, airport b): \n",
+    "This function finds whether a food box can be sent from airport a to airport b with any number of stops/transfers (i.e. to deliver the food box from airport a to airport b it might even get transferred on another flight at an intermediary airport c). \n",
+    "The function reads the input airports from the file promptsPS15.txt with the tag as shown below.\n",
+    "\n",
+    "ServiceAvailability: Calcutta: Mumbai\n",
+    "\n",
+    "ServiceAvailability: Nagpur: Vishakhapatnam\n",
+    "\n",
+    "\n",
+    "Also display the entire route to transfer the food box from airport a to airport b. \n",
+    "The output of this function should be appended into outputPS15.txt file. \n",
+    "If the food box can’t be transferred or an airport is not found, an appropriate message should be output to the file. \n",
+    "The output format should be as mentioned below.\n",
+    "\n",
+    "--------Function findServiceAvailable --------\n",
+    "\n",
+    "Airport A: Calcutta\n",
+    "\n",
+    "Airport B: Nagpur\n",
+    "\n",
+    "\n",
+    "Can the food box be sent: Yes, Calcutta > Indigo666 > New Delhi > AirIndia111 > Ahmedabad > GoAir444 > Nagpur (if no, display appropriate message)\n",
+    "\n",
+    "-----------------------------------------\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Algorithm\n",
+    "1. check if direct flight is available by calling displayDirectFlight(self, airport a, airport b\n",
+    "2. If yes, then return the path and exit\n",
+    "3. If No, get the list of connected flights of the source airport\n",
+    "\n",
+    "    4. For each flight get the list of connected air ports\n",
+    "\n",
+    "        5. Keep a record on the visited airports\n",
+    "\n",
+    "        6. Repeat recursively until direct flight to the destination airport is found\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Global variable to keep track of visited airports during the recursive calls\n",
+    "visited_airports = [False]*len(airports_dict)\n",
+    "path = []\n",
+    "def findServiceAvailableRecursive(airport_a,airport_b):\n",
+    "    # Notice that case0 won't occur since if there is no path from a -> b then b won't be marked as visited\n",
+    "    # # case0: No service available (all airports visited)\n",
+    "    # if all(visited_airports):\n",
+    "    #     print(\"No service available\")\n",
+    "    #     return -1\n",
+    "    # Case1: Already visited source airport\n",
+    "    if visited_airports[airports_dict[airport_a]]:\n",
+    "        return None\n",
+    "    # Case2: Destination airport found/ Direct flight exists to destination\n",
+    "    elif (flight := displayDirectFlight(airport_a,airport_b,True)) is not None:\n",
+    "        path.insert(0,airport_b)\n",
+    "        path.insert(0,flight)\n",
+    "        return True\n",
+    "    # Case3: Destination airport not found / No direct flight exists to destination (Recursive calls)\n",
+    "    else:\n",
+    "        # mark source airport as visited\n",
+    "        visited_airports[airports_dict[airport_a]] = True\n",
+    "        # List of connected flights to source airport\n",
+    "        connected_flights = displayConnectedFlights(airport_a)\n",
+    "        for connected_flight in connected_flights:\n",
+    "            # List of connected airports for a connected flight\n",
+    "            connected_airports = displayConnectedAirports(connected_flight,True)\n",
+    "            for connected_airport in connected_airports:\n",
+    "                # Recursively find the path from connected airport to destination airport\n",
+    "                # print(\"Call -> findServiceAvailableRecursive({},{})\".format(connected_airport,airport_b))\n",
+    "                result = findServiceAvailableRecursive(connected_airport,airport_b)\n",
+    "                # print(\"Call -> findServiceAvailableRecursive({},{})  Result: {}\".format(connected_airport,airport_b,result))\n",
+    "                # Merge the result from recursive call\n",
+    "                if result==True:\n",
+    "                    path.insert(0,connected_airport)\n",
+    "                    path.insert(0,connected_flight)\n",
+    "                    return result\n",
+    "                    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# findServiceAvailableRecursive(\"Chennai\",\"Nagpur\")\n",
+    "findServiceAvailableRecursive(\"Chennai\",\"Hyderabad\")\n",
+    "print(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Wrapper function for findServiceAvailableRecursive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findServiceAvailable(airport_a,airport_b):\n",
+    "    global visited_airports\n",
+    "    visited_airports = [False]*len(airports_dict)\n",
+    "    global path\n",
+    "    path = []\n",
+    "    output_msg = \"\\n--------Function findServiceAvailable --------\\n\"\n",
+    "    output_msg += \"Airport A: {}\\n\".format(airport_a)\n",
+    "    output_msg += \"Airport B: {}\\n\".format(airport_b)\n",
+    "    findServiceAvailableRecursive(airport_a,airport_b)\n",
+    "    if len(path)!=0:\n",
+    "        # path.insert(0,airport_a)\n",
+    "        output_msg += \"Can the food box be sent: Yes, \"\n",
+    "        output_msg += \"{} \".format(airport_a)\n",
+    "        for i in path:\n",
+    "            output_msg += \"> {} \".format(i)\n",
+    "    # This condition is not being hit. Check !!!\n",
+    "    else:\n",
+    "        output_msg += \"Can the food box be sent: No, Sorry there is no service available from {} to {}\\n\".format(airport_a,airport_b)\n",
+    "    output_msg += \"\\n-----------------------------------------\\n\"\n",
+    "    print(output_msg)\n",
+    "    write_to_file(output_msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------Function findServiceAvailable --------\n",
+      "Airport A: Chennai\n",
+      "Airport B: Mumbai\n",
+      "Can the food box be sent: Yes, Chennai > Indigo666 > New Delhi > AirIndia111 > Ahmedabad > Spicejet222 > Mumbai \n",
+      "-----------------------------------------\n",
+      "\n",
+      "\n",
+      "--------Function findServiceAvailable --------\n",
+      "Airport A: Chennai\n",
+      "Airport B: Vishakhapatnam\n",
+      "Can the food box be sent: No, Sorry there is no service available from Chennai to Vishakhapatnam\n",
+      "\n",
+      "-----------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "findServiceAvailable(\"Chennai\",\"Mumbai\")\n",
+    "findServiceAvailable(\"Chennai\",\"Vishakhapatnam\")"
    ]
   },
   {
